--- a/articles/sty/review-base.sty
+++ b/articles/sty/review-base.sty
@@ -1,4 +1,4 @@
-\ProvidesClass{review-base}[2020/08/16]
+\ProvidesClass{review-base}[2022/07/25]
 \RequirePackage{ifthen}
 \@ifundefined{Hy@Info}{% for jsbook.cls
   \RequirePackage[dvipdfmx,bookmarks=true,bookmarksnumbered=true]{hyperref}
@@ -40,6 +40,9 @@
 \RequirePackage{amsthm}
 \RequirePackage{bm}
 \RequirePackage{tabularx}
+\RequirePackage{endnotesj}
+
+\def\enoteheading{}% endnotesj.styの後注前見出しおよび空行の出力を抑制
 
 %% if you use @<u>{} (underline), use jumoline.sty
 \IfFileExists{jumoline.sty}{
@@ -65,9 +68,12 @@
 \rubysetup{J}}{%
 \rubysetup{g}}
 
+\DeclareRobustCommand{\reviewtcy}[1]{\PackageError{review-base}{\reviewtcy is not allowed in yoko mode}{}}
+
 \ifthenelse{\equal{\review@documentclass}{utbook} \OR \equal{\review@documentclass}{tbook}}{%
 \newcommand{\headfont}{\gtfamily\sffamily\bfseries}
 \RequirePackage{plext}
+\DeclareRobustCommand{\reviewtcy}[1]{\rensuji{#1}}
 }{%
 }
 
@@ -112,8 +118,8 @@
 
 \newenvironment{reviewdummyimage}{%
   \begin{figure}
-    \begin{center}\begin{alltt}}{%
-    \end{alltt}\end{center}
+    \begin{center}}{%
+    \end{center}
   \end{figure}}
 
 \DeclareRobustCommand{\reviewincludegraphics}[2][]{%
@@ -200,6 +206,7 @@
 \newcommand{\reviewequationref}[1]{\review@intn@equation #1}
 \newcommand{\reviewbibref}[2]{\hyperref[#2]{#1}}
 \newcommand{\reviewcolumnref}[2]{#1}% XXX:ハイパーリンクにはreviewcolumn側の調整が必要
+\newcommand{\reviewchapref}[2]{\hyperref[#2]{#1}}
 \newcommand{\reviewsecref}[2]{\hyperref[#2]{#1}}
 
 \newenvironment{reviewpart}{%
@@ -207,9 +214,9 @@
 \renewcommand{\thesection}{\thepart.\@arabic\c@section}%
 }{}
 
-\newcommand{\reviewminicolumntitle}[1]{%
+\newcommand{\reviewminicolumntitle}[2]{%
 \review@ifempty{#1}{}{%
-  {\large \review@intn@memohead{}: #1}\\}}
+  {\large ■#2: #1}\\}}
 
 \renewcommand{\contentsname}{\review@toctitle}
 
@@ -219,35 +226,35 @@
 
 \newenvironment{reviewnote}[1][]{%
   \begin{reviewminicolumn}
-\review@ifempty{#1}{}{\reviewminicolumntitle{#1}}
+  \reviewminicolumntitle{#1}{\review@intn@notehead}
 }{\end{reviewminicolumn}}
 \newenvironment{reviewmemo}[1][]{%
   \begin{reviewminicolumn}
-  \reviewminicolumntitle{#1}
+  \reviewminicolumntitle{#1}{\review@intn@memohead}
 }{\end{reviewminicolumn}}
 \newenvironment{reviewtip}[1][]{%
   \begin{reviewminicolumn}
-  \reviewminicolumntitle{#1}
+  \reviewminicolumntitle{#1}{\review@intn@tiphead}
 }{\end{reviewminicolumn}}
 \newenvironment{reviewinfo}[1][]{%
   \begin{reviewminicolumn}
-  \reviewminicolumntitle{#1}
+  \reviewminicolumntitle{#1}{\review@intn@infohead}
 }{\end{reviewminicolumn}}
 \newenvironment{reviewwarning}[1][]{%
   \begin{reviewminicolumn}
-  \reviewminicolumntitle{#1}
+  \reviewminicolumntitle{#1}{\review@intn@warninghead}
 }{\end{reviewminicolumn}}
 \newenvironment{reviewimportant}[1][]{%
   \begin{reviewminicolumn}
-  \reviewminicolumntitle{#1}
+  \reviewminicolumntitle{#1}{\review@intn@importanthead}
 }{\end{reviewminicolumn}}
 \newenvironment{reviewcaution}[1][]{%
   \begin{reviewminicolumn}
-  \reviewminicolumntitle{#1}
+  \reviewminicolumntitle{#1}{\review@intn@cautionhead}
 }{\end{reviewminicolumn}}
 \newenvironment{reviewnotice}[1][]{%
   \begin{reviewminicolumn}
-  \reviewminicolumntitle{#1}
+  \reviewminicolumntitle{#1}{\review@intn@noticehead}
 }{\end{reviewminicolumn}}
 
 \DeclareRobustCommand{\reviewkw}[1]{\textbf{\textgt{#1}}}
@@ -267,6 +274,7 @@
   \def\reviewballoon#1{#1}
   \def\reviewbou#1{#1}
   \def\reviewkw#1{#1}
+  \def\reviewinsert#1{#1}
   \def\reviewstrike#1{#1}
   \def\reviewunderline#1{#1}
 }
@@ -321,14 +329,14 @@
 
 \DeclareRobustCommand{\reviewbou}[1]{\kenten{#1}}
 
-%% @<del> is ignored in LaTeX with default style
-\DeclareRobustCommand{\reviewstrike}[1]{#1}
+\DeclareRobustCommand{\reviewinsert}[1]{\Underline{#1}}
+\DeclareRobustCommand{\reviewstrike}[1]{\Midline{#1}}
+\DeclareRobustCommand{\reviewicon}[1]{\includegraphics[]{#1}}
+% アイコンの高さを文字の高さに合わせたいときには、以下をreview-custom.styに記述してください:
+% \DeclareRobustCommand{\reviewicon}[1]{\includegraphics[height=0.9zw]{#1}}
 
 %%%% for ulem.sty:
 %%\renewcommand{\reviewstrike}[1]{\sout{#1}}
-%%
-%%%% for jumoline.sty:
-%%\renewcommand{\reviewstrike}[1]{\Middleline{#1}}
 
 \newcommand{\reviewth}[1]{\textgt{#1}}
 \newcommand{\reviewtitlefont}[0]{\usefont{T1}{phv}{b}{n}\gtfamily}
